WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166257
Fix yet another app that uses initEvent with fewer than 3 parameters
https://bugs.webkit.org/show_bug.cgi?id=166257
Summary
Fix yet another app that uses initEvent with fewer than 3 parameters
Alex Christensen
Reported
2016-12-20 13:36:09 PST
Fix yet another app that uses initEvent with fewer than 3 parameters
Attachments
Patch
(2.99 KB, patch)
2016-12-20 13:37 PST
,
Alex Christensen
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-12-20 13:37:53 PST
Created
attachment 297552
[details]
Patch
Alex Christensen
Comment 2
2016-12-20 13:42:17 PST
https://trac.webkit.org/changeset/210034
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug