Fix yet another app that uses initEvent with fewer than 3 parameters https://bugs.webkit.org/show_bug.cgi?id=166257 <rdar://problem/29420268>

Reviewed by Sam Weinig.

* dom/Event.cpp:
(WebCore::Event::initEventForBindings):
* platform/RuntimeApplicationChecks.h:
* platform/RuntimeApplicationChecks.mm:
(WebCore::IOSApplication::isAutoNaviAMap):
AutoNavi amap has content that uses initEvent with one parameter. This quirk is needed here, too.



Canonical link: https://commits.webkit.org/183653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210034 268f45cc-cd09-0410-ab3c-d52691b4dbfc