Source/WebCore/dom/Event.cpp
@@ -95,7 +95,8 @@ ExceptionOr<void> Event::initEventForBindings(ScriptExecutionContext& scriptExec
 #if PLATFORM(IOS)
     // FIXME: Temporary quirk for Baidu Nuomi App which calls initEvent() with too few parameters (rdar://problem/28707838).
     // FIXME: Quirk also needed for Flipboard for same reason (rdar://problem/28264190).
-    if (IOSApplication::isBaiduNuomi() || IOSApplication::isFlipboard()) {
+    // FIXME: We really ought to consider if this is web compatible. AutoNavi also uses initEvent with one parameter. rdar://problem/29420268
+    if (IOSApplication::isBaiduNuomi() || IOSApplication::isFlipboard() || IOSApplication::isAutoNaviAMap()) {
         scriptExecutionContext.addConsoleMessage(MessageSource::JS, MessageLevel::Warning, ASCIILiteral("Calling Event.prototype.initEvent() with less than 3 parameters is deprecated."));
         initEvent(type, bubbles, false);
         return { };
